<resources>
    <string name="app_name">Quiz App</string>
    <string name="metallica">How many components is the Metallica band formed?</string>
    <string name="pinkfloyd">Which of these songs belongs to Pink Floyd?</string>
    <string name="eagles">Who was the Eagles drummer?</string>
    <string name="genesis">Which of these songs belongs to Genesis?</string>
    <string name="nirvana">What year were Nirvana formed?</string>
    <string name="rock_genere">Which of these groups does not belong to the Rock genre?</string>
    <string name="Zeppelin">Which of these songs belongs to Led Zeppelin?</string>
    <string name="elvis">With what nickname has the unique and inimitable Elvis Presley gone down in history?</string>
    <string name="beatles">What is the single of The Beatles to have sold the most ever?</string>
    <string name="freddie">The legendary Freddie Mercury, founder of Queen, was born in 1970 in ...</string>
    <string name="u2">U2 before U2: what was the original name of the Bono Vox band?</string>
    <string name="pearl">In 1991 he released the first album of Pearl Jam, which is titled ...</string>
    <string name="metallicahint" translatable="false">10</string>
    <string name="buttonText">Check!</string>
    <string name="PointButton">Discover the details</string>
    <string name="emailButton">Send by email</string>
    <string name="sbPink" translatable="false">Yellow</string>
    <string name="corrPinkOne" translatable="false">Pigs</string>
    <string name="corrPinkTwo" translatable="false">Time</string>
    <string name="sbPinkTwo" translatable="false">In the city of blinding lights</string>
    <string name="sbEag" translatable="false">Nick Mason</string>
    <string name="corrEag" translatable="false">Don Henley</string>
    <string name="sbEagTwo" translatable="false">Joey Jordison</string>
    <string name="sbGen" translatable="false">Surfing with the alien</string>
    <string name="sbGenTwo" translatable="false">Time</string>
    <string name="rightGen" translatable="false">Mama</string>
    <string name="rightNir" translatable="false">1987</string>
    <string name="sbNir" translatable="false">1997</string>
    <string name="sbNirTwo" translatable="false">1990</string>
    <string name="ac_dc" translatable="false">AC/DC</string>
    <string name="weather_report" translatable="false">Weather Report</string>
    <string name="deep_purple" translatable="false">Deep Purple</string>
    <string name="rightLed" translatable="false">Kashmir</string>
    <string name="wrongLed" translatable="false">Mama Said</string>
    <string name="wrongLedTwo" translatable="false">Samba Pa Ti</string>
    <string name="wrongElvis" translatable="false">The Beast</string>
    <string name="wrongElvisTwo" translatable="false">The One</string>
    <string name="rightElvis" translatable="false">The King</string>
    <string name="wrongBeat" translatable="false">All You Need Is Love</string>
    <string name="rightBeat" translatable="false">She Loves You</string>
    <string name="wrongBeatTwo" translatable="false">Hey Jude</string>
    <string name="corrQueen" translatable="false">Zanzibar</string>
    <string name="wrongQueen">London</string>
    <string name="wrongQueenTwo" translatable="false">Liverpool</string>
    <string name="wrongU2" translatable="false">Young</string>
    <string name="wrongU2Two" translatable="false">Pectoralz</string>
    <string name="rightU2" translatable="false">Feedback</string>
    <string name="rightJam" translatable="false">Ten</string>
    <string name="wrongJam" translatable="false">Two</string>
    <string name="worngJamTwo" translatable="false">Nine</string>
    <string name="score">Your score is: </string>
    <string name="zeroScore">\nYou do not know anything about Rock! </string>
    <string name="lowScore">\nCan you do any better!</string>
    <string name="midScore">\nWell done!</string>
    <string name="highScore">\nGreat, you are very well informed about the Rock world!</string>
    <string name="results">Results of RockQuiz</string>
    <string name="rush">What is the latest Rush album?</string>
    <string name="_2112" translatable="false">2112</string>
    <string name="signals" translatable="false">Signals</string>
    <string name="clockwork_angels" translatable="false">Clockwork Angels</string>
    <string name="description_image">An image for the Band</string>
    <string name="reset_quiz" translatable="false">Reset Quiz</string>
    <string name="loginButton" translatable="false">Login</string>
    <string name="quiztitleDescr">QuizTitle</string>
    <string name="background_image">Background Image</string>
    <string name="usernameHint" translatable="false">Username</string>
    <string name="exit">Exit</string>
    <string name="partial">Results</string>
    <string name="ToastMainComplete">Now you can see your answers. Click the next button to discover your complete results!</string>
    <string name="ToastMainNoAnswer">You must give at least one answer</string>
    <string name="noUserName">You did not enter a username</string>
</resources>
