<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.int26.quizapp.Recap">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/logins" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/cardRecapWidth"
            android:layout_height="@dimen/cardRecapHeight"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardElevation="@dimen/cardElevationRecap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/ImageViewRecapWidth"
                    android:layout_height="@dimen/ImageViewRecapHeight"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/ImageViewRecapPaddingTop"
                    android:contentDescription="@string/quiztitleDescr"
                    android:src="@drawable/scrittarecap" />

                <TextView
                    android:id="@+id/recapText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/padding_margin"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/padding_margin"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/mail"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="inviaEmail"
                        android:text="@string/emailButton" />

                    <Button
                        android:id="@+id/reset"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="reset"
                        android:text="@string/reset_quiz" />

                    <Button
                        android:id="@+id/exit"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="exit"
                        android:text="@string/exit" />
                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
